@@ -2,6 +2,11 @@
 Top of CVS tree:
 ------------------------------------------------------------------------------
 
+gtk-v2/src/inventory.c: Add tooltips to the inventory tabs, to make it
+clearer what the different tabs do.
+--
+MSW 2007-06-11
+
 Add pick up menu updating support for gtk2 client - when you log in, it
 will get your character pickup mode and update the check boxes accordingly.
 ---
